--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,5 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+.DS_Store
+notebooks/.DS_Store
